versioned_docs/version-5.1/client-api/bulk-insert/how-to-work-with-bulk-insert-operation.mdx
---
title: "Bulk Insert: How to Work With Bulk Insert Operation"
hide_table_of_contents: true
sidebar_label: How to Work With Bulk Insert Operation
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Bulk Insert: How to Work With Bulk Insert Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* `BulkInsert` is useful when inserting a large quantity of data from the client to the server.  
* It is an optimized time-saving approach with a few [limitations](../../client-api/bulk-insert/how-to-work-with-bulk-insert-operation.mdx#limitations)
  such as transactionality and the possibility of interruptions during the operation.

In this page:

* [Syntax](../../client-api/bulk-insert/how-to-work-with-bulk-insert-operation.mdx#syntax)
* [BulkInsertOperation](../../client-api/bulk-insert/how-to-work-with-bulk-insert-operation.mdx#bulkinsertoperation)
* [Example](../../client-api/bulk-insert/how-to-work-with-bulk-insert-operation.mdx#example)

</Admonition>

## Syntax

<TabItem value="bulk_inserts_1" label="bulk_inserts_1">
<CodeBlock language="csharp">
{`BulkInsertOperation BulkInsert(string database = null, CancellationToken token = default);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **database** | string | Name of database for which bulk operation should be performed. If `null` then the `Database` from DocumentStore will be used. |
| **token** | CancellationToken | Cancellation token used in order to halt the worker operation. |

| Return Value | |
| ------------- | ----- |
| BulkInsertOperation| Instance of BulkInsertOperation used for interaction. |



## BulkInsertOperation

### Methods

| Signature | Description |
| ----------| ----- |
| **void Abort()** | Abort the operation |
| **void Store(object entity, IMetadataDictionary metadata = null)** | store the entity, identifier will be generated automatically on client-side. Optional, metadata can be provided for the stored entity. |
| **void Store(object entity, string id, IMetadataDictionary metadata = null)** | store the entity, with `id` parameter to explicitly declare the entity identifier. Optional, metadata can be provided for the stored entity.|
| **void StoreAsync(object entity, IMetadataDictionary metadata = null)** | store the entity in an async manner, identifier will be generated automatically on client-side. Optional, metadata can be provided for the stored entity. |
| **void StoreAsync(object entity, string id, IMetadataDictionary metadata = null)** | store the entity in an async manner, with `id` parameter to explicitly declare the entity identifier. Optional, metadata can be provided for the stored entity.|
| **void Dispose()** | Dispose an object |
| **void DisposeAsync()** | Dispose an object in an async manner |

### Limitations

There are a couple limitations to the API:

* BulkInsert is designed to efficiently push high quantities of data.  
  As such, data is streamed and **processed by the server in batches**.  
  Each batch is fully transactional, but there are no transaction guarantees between the batches. The operation as a whole is non-transactional. 
  If your bulk insert is interrupted mid-way, some of your data might be persisted on the server while some of it might not.  
  * Make sure that your logic accounts for the possibility of an interruption where some of your data has not yet persisted on the server.
  * If the operation was interrupted, one option is to re-insert the whole dataset in a new operation.  
    It will overwrite existing documents.
  * **If you need full transactionality**, the [session](../../client-api/session/what-is-a-session-and-how-does-it-work.mdx) may be a better option.  
    If using the session, because all of the data is processed in one transaction, your server resources must be able to handle the 
    entire data-set included in the transaction.  
* Bulk insert is **not thread-safe**.  
  A single bulk insert should not be accessed concurrently.  
  * The use of multiple bulk inserts concurrently on the same client is supported.  
  * Also the use in an async context is supported.



## Example

### Create bulk insert

Here we create a bulk insert operation and inserting a million documents of type Employee
<Tabs groupId='languageSyntax'>
<TabItem value="sync" label="sync">
<CodeBlock language="csharp">
{`using (BulkInsertOperation bulkInsert = store.BulkInsert())
{
    for (int i = 0; i < 1000 * 1000; i++)
    {
        bulkInsert.Store(new Employee
        {
            FirstName = "FirstName #" + i,
            LastName = "LastName #" + i
        });
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="async" label="async">
<CodeBlock language="csharp">
{`BulkInsertOperation bulkInsert = null;
try
{
    bulkInsert = store.BulkInsert();
    for (int i = 0; i < 1000 * 1000; i++)
    {
        await bulkInsert.StoreAsync(new Employee
        {
            FirstName = "FirstName #" + i,
            LastName = "LastName #" + i
        });
    }
}
finally
{
    if (bulkInsert != null)
    {
        await bulkInsert.DisposeAsync().ConfigureAwait(false);
    }
}
`}
</CodeBlock>
</TabItem>
</Tabs>




</LanguageContent>
<LanguageContent language="java">


One of the features that is particularly useful when inserting large amount of data is `bulk inserting`. This is an optimized time-saving approach with few drawbacks that will be described later.

## Syntax

<TabItem value="bulk_inserts_1" label="bulk_inserts_1">
<CodeBlock language="java">
{`BulkInsertOperation bulkInsert();

BulkInsertOperation bulkInsert(String database);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **database** | String | Name of database for which bulk operation should be performed. If `null` then the `Database` from DocumentStore will be used. |

| Return Value | |
| ------------- | ----- |
| BulkInsertOperation| Instance of BulkInsertOperation used for interaction. |

# BulkInsertOperation

### Methods

| Signature | Description |
| ----------| ----- |
| **void abort()** | Abort the operation |
| **void store(Object entity, IMetadataDictionary metadata = null)** | store the entity, identifier will be generated automatically on client-side. Optional, metadata can be provided for the stored entity. |
| **void store(Object entity, String id, IMetadataDictionary metadata = null)** | store the entity, with `id` parameter to explicitly declare the entity identifier. Optional, metadata can be provided for the stored entity.|
| **void close()** | Close an object |

## Limitations

There are a couple limitations to the API:

* The bulk insert operation is broken into batches, each batch is treated in its own transaction so the whole operation isn't treated under a single transaction.
* Bulk insert is not thread safe, a single bulk insert should not be accessed concurrently. The use of multiple bulk inserts, on the same client, concurrently is supported also the use in an async context is supported.

## Example

### Create bulk insert

Here we create a bulk insert operation and inserting a million documents of type Employee

<TabItem value="bulk_inserts_4" label="bulk_inserts_4">
<CodeBlock language="java">
{`try (BulkInsertOperation bulkInsert = store.bulkInsert()) \{
    for (int i = 0; i < 1_000_000; i++) \{
        Employee employee = new Employee();
        employee.setFirstName("FirstName #" + i);
        employee.setLastName("LastName #" + i);
        bulkInsert.store(employee);
    \}
\}
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">


One of the features that is particularly useful when inserting large amount of data is `bulk inserting`. This is an optimized time-saving approach with few drawbacks that will be described later.

## Syntax

<TabItem value="bulk_inserts_1" label="bulk_inserts_1">
<CodeBlock language="js">
{`documentStore.bulkInsert([database]);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **database** | string | Name of database for which bulk operation should be performed. If `null` then the `database` from DocumentStore will be used. |

| Return Value | |
| ------------- | ----- |
| `BulkInsertOperation` | Instance of BulkInsertOperation used for interaction. |

# BulkInsertOperation

### Methods

| Signature | Description |
| ----------| ----- |
| **async abort()** | Aborts the bulk insert operation. Returns a `Promise`. |
| **async store(entity, [metadata])** | store the entity, identifier will be generated automatically on client-side. Optional, metadata can be provided for the stored entity. Returns a `Promise`. |
| **async store(entity, id, [metadata])** | store the entity, with `id` parameter to explicitly declare the entity identifier. Optional, metadata can be provided for the stored entity. Returns a `Promise`. |
| **async finish()** | Finish bulk insert and flush everything to the server. Returns a `Promise`. |

## Limitations

There are a couple limitations to the API:

* The bulk insert operation is broken into batches, each batch is treated in its own transaction so the whole operation isn't treated under a single transaction.

## Example

### Create bulk insert

Here we create a bulk insert operation and inserting a million documents of type Employee

<TabItem value="bulk_inserts_4" label="bulk_inserts_4">
<CodeBlock language="js">
{`\{
    const bulkInsert = documentStore.bulkInsert();
    for (let i = 0; i < 1000000; i++) \{
        const employee = new Employee("FirstName #" + i, "LastName #" + i);
        await bulkInsert.store(employee);
    \}

    await bulkInsert.finish();
\}
`}
</CodeBlock>
</TabItem>


</LanguageContent>

<!---
### Document Store
- [What is a Document Store](../../client-api/what-is-a-document-store)

### Session
- [What is a Session and How Does it Work](../../client-api/session/what-is-a-session-and-how-does-it-work)


-->